objects/LLC_BI__Loan_Collateral__c.object
<CustomObject>
    <description>The Collateral object contains information about the pieces of collateral used to secure a loan</description>
    <fields>
        <fullName>Abundance_of_Caution_c__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Abundance of Caution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assesment_Date_c__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Assesment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assesment_Method__c</fullName>
        <label>Assesment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Appraisal</fullName>
                </value>
                <value>
                    <fullName>Internal Valuation</fullName>
                </value>
                <value>
                    <fullName>Net Book Value</fullName>
                </value>
                <value>
                    <fullName>Property Tax Assessment</fullName>
                </value>
                <value>
                    <fullName>Sales Invoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certificated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certificated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Condo_Project_Name_c__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Condo/Project Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Type_c__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Letter Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>County_C__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>County</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Insurance_Coverage_Amount_c__c</fullName>
        <label>Insurance Coverage Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Insurance_Effective_Date_C__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Insurance Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insurance_Reviewed_C__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Insurance Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Insurance_Type__c</fullName>
        <label>Insurance Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business Personal Property</fullName>
                </value>
                <value>
                    <fullName>Comprehensive/Collision</fullName>
                </value>
                <value>
                    <fullName>Condo Master</fullName>
                </value>
                <value>
                    <fullName>Earthquake</fullName>
                </value>
                <value>
                    <fullName>Fire</fullName>
                </value>
                <value>
                    <fullName>Flood - Building</fullName>
                </value>
                <value>
                    <fullName>Flood - Contents</fullName>
                </value>
                <value>
                    <fullName>General Liability</fullName>
                </value>
                <value>
                    <fullName>Homeowners</fullName>
                </value>
                <value>
                    <fullName>Hurricane</fullName>
                </value>
                <value>
                    <fullName>Other (Boat, Airplane, etc.)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Advance_Rate__c</fullName>
        <description>This field is optional and sets that collateral type&apos;s advanced rate. It is manually populated.</description>
        <label>Advance Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Agricultural_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually populated. It is a checkbox that specifies if the piece of collateral is used for agricultural purposes.</description>
        <label>Agricultural Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Airframe_Engine_Log_Books_Description__c</fullName>
        <description>This field is optional and manually populated. It is a text area to detail information about the airframe and engine log books that are needed when securing a loan with titled aircraft collateral.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Airframe/Engine Log Books Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Airport_Home_Base__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify which airport is the home base location for the titled aircraft collateral.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Airport / Home Base</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Appraisal_Date__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the date of the most recent appraisal.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date of the last time the collateral was appraised.</inlineHelpText>
        <label>Appraisal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Asset_Fixtures__c</fullName>
        <description>Depreciated field. no longer used in the collateral object</description>
        <inlineHelpText>Select whether the business assets include fixtures</inlineHelpText>
        <label>Asset Fixtures -D</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LLC_BI__Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Avionics_Engines_Description__c</fullName>
        <description>This field is optional and manually populated. Use this field to describe the engines in the titled aircraft collateral.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Avionics / Engines Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Block__c</fullName>
        <description>This field is optional and manually populated. Use this field to note the Real Estate Block Number.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Block</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Body__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the body or style of titled collateral.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Body</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Book_Entry__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually populated. It is a checkbox to specify that the collateral has been entered on the books. This field is typically used with Possessory Collateral types.</description>
        <label>Book Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CUSIP_Number__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the CUSIP number for a piece of possessory Collateral. A CUSIP number identifies most securities, including stocks of all registered U.S. and Canadian companies and U.S. government and municipal bonds.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>CUSIP Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Address__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the physical street address for collateral.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Collateral Street Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Affixed_to_a_Permanent_Site__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually populated. It is a checkbox used to specify if the piece of collateral in question is affixed to a permanent site.</description>
        <label>Collateral Affixed to a Permanent Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_City_State_Zip__c</fullName>
        <description>Depreciated field that is no longer in use replaced by Collateral City, Collateral State, and Collateral Zip Code</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Place the collateral address city, state, and zip here, separated by comma&apos;s</inlineHelpText>
        <label>Collateral City, State, Zip -D</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_City__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the city address for the collateral.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Collateral City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Code__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the code a financial institution uses to categorize the type of collateral being used.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Collateral Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Insurance_Agent__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the insurance agent with which the collateral is insured.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Collateral Insurance Agent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Insurance_City__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the city address of the insurance company where the collateral is insured.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Collateral Insurance City</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Insurance_Company__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the company where the collateral is insured.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Collateral Insurance Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Insurance_Phone__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the phone number of the insurance company where the collateral is insured.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Collateral Insurance Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Insurance_Policy_Number__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the insurance policy number for the collateral.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Collateral Insurance Policy Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Insurance_State__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the state address of the insurance company with which the collateral is insured.</description>
        <label>Collateral Insurance State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Insurance_Street__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the physical street address of the insurance company with which the collateral is insured.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Collateral Insurance Street</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Insurance_Zipcode__c</fullName>
        <description>This field is optional and manually populated. It is to specify the ZIP code for the address of the insurance company with which the collateral is insured.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Collateral Insurance Zipcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Issued_By__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify if the Lender or Other has issued this collateral. This field is used to map to Laser Pro and is only valid when working with a Savings/CD collateral subtype.</description>
        <label>Collateral Issued By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lender</fullName>
                </value>
                <value>
                    <fullName>Other Issuer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Issuer__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the issuer of the collateral. This field is used to map to Laser Pro and is only valid when working with a Securities collateral subtype.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Collateral Issuer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Location__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the latitude and longitude of the collateral location. The field currently supports entry of up to 6 decimals.</description>
        <label>Collateral Location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Name__c</fullName>
        <description>This field is optional and manually populated. Use this field to store the name of the collateral.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Collateral Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_State__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the state address for the collateral.</description>
        <label>Collateral State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Value__c</fullName>
        <description>This field is optional and manually populated. Use this field to note the appraised value of the collateral.</description>
        <label>Collateral Value</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Zip_Code__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the ZIP code for the address of the piece of collateral.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Collateral Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Commercial_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually populated. It is a checkbox used to specify that the collateral is used for commercial purposes.</description>
        <label>Commercial Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Condo_PUD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually populated. It is a checkbox used to specify that the Collateral is used for condo or planned unit development purposes.</description>
        <label>Condo/PUD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Contract_Date__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the date when a government contract that is being used as Collateral was entered into.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Contract_Number__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the contract number of a government contract collateral.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Contract_Type__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the contract type as Contract or Letter Contract.</description>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Letter Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Deposit_Account_Number__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the account number for a deposit account being used as collateral.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Deposit Account Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Description__c</fullName>
        <description>This field is optional and manually populated. It is a text field associated with all types of collateral. Use this field to provide further description of assets being used as collateral.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Dwelling__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually populated. It is a checkbox that specifies if the collateral is used as a place of residence.</description>
        <label>Dwelling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Engines_Equipment_Description__c</fullName>
        <description>This field is optional and manually populated. Use this field to further describe engines and/or equipment of the collateral being used to secure a loan.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Engines/Equipment Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Existing_Beneficiaries__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually populated. It is a checkbox used to specify that there are existing beneficiaries to a Life Insurance Policy collateral that is used to secure a loan.</description>
        <label>Existing Beneficiaries</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__FAA_Registration_Number__c</fullName>
        <description>This Field is used to record the FAA Registration number on aircraft collateral. The FAA Registration number acts just as a license plate for a motor vehicle does.</description>
        <label>-D FAA Registration Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__FAA_Registration__c</fullName>
        <description>This field is optional and specifies the Federal Aviation Administration registration number. It is manually populated.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>FAA Registration Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Gross_Lendable_Value__c</fullName>
        <description>This field indicates the collateral value multiplied by the advance rate. It is auto-populated when collateral value is entered, and there is an advanced rate set.</description>
        <formula>LLC_BI__Collateral_Value__c * LLC_BI__Advance_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Lendable Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Gross_Tonnage__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the maximum amount of weight related to a ship&apos;s overall internal volume. This field that maps to Laser Pro is unique to a Vessel subtype.</description>
        <label>Gross Tonnage</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Held_By__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify who holds ownership of the Collateral being used to secure a loan.</description>
        <label>Held By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Lender</fullName>
                </value>
                <value>
                    <fullName>Other Holder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Hull_and_Engine_Log_Books_Description__c</fullName>
        <description>This field is optional and manually populated. Use this text area to detail information around the hull and engine log books that are needed when securing a loan with boat/vessel collateral.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Hull and Engine Log Books Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Include_Land_As_Collateral__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually populated. It is a checkbox used to specify if the land where the piece of property collateral is located should also be included in the collateral amount.</description>
        <label>Include Land As Collateral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Leasehold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually populated. It is a checkbox used to specify that the collateral is used in a leasehold, where the owner has granted temporary rights to a lessee to hold land or property.</description>
        <label>Leasehold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Legal_Entity_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional and manually populated. Use this field to look up a relationship to specify the name of a secondary collateral owner.</description>
        <inlineHelpText>Eg: If there is a husband and wife pair that own the real estate, reference both entities.</inlineHelpText>
        <label>Collateral Owner 2</label>
        <referenceTo>LLC_BI__Legal_Entities__c</referenceTo>
        <relationshipLabel>Collateral (Collateral Owner 2)</relationshipLabel>
        <relationshipName>Collateral</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Legal_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional and manually populated. Use this field to look up a relationship to specify the name of the collateral owner.</description>
        <inlineHelpText>What Legal Entity is the Collateral owned by?</inlineHelpText>
        <label>Collateral Owner 1</label>
        <referenceTo>LLC_BI__Legal_Entities__c</referenceTo>
        <relationshipLabel>Collateral (Collateral Owner (Legal Entity))</relationshipLabel>
        <relationshipName>Loan_Collaterals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Letter_of_Credit_Date__c</fullName>
        <description>This field is optional and manually populated. Use this field to capture the date on which the Letter of Credit was issued.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Letter of Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Lien__c</fullName>
        <description>This field is optional and manually populated. Use this picklist to reflect whether the lien is 1st, 2nd, or 3rd.</description>
        <label>Lien</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1st</fullName>
                </value>
                <value>
                    <fullName>2nd</fullName>
                </value>
                <value>
                    <fullName>3rd</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Life_Insurance_Agency__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the company that holds the life insurance policy being used to secure a loan.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Life Insurance Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Life_Insurance_Amount__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the amount of the life insurance coverage.</description>
        <label>Life Insurance Benefit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Life_Insurance_Company_City__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the city associated to the address of the insurance company where the life insurance policy is held.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Life Insurance Company City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>